fix(component): modified the padding value of icon class to align the icon to middle of the input
"fix #183"

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -185,7 +185,7 @@ label {
   width: 25px;
   height: 25px;
   border-radius: 3px;
-  padding: 3px 0 0 6px;
+  padding: 6px 0 0 6px;
   display: block;
   -ms-flex-pack: center;
   -webkit-box-align: center;
